buildscript {
    ext {
        lombokVersion = '1.18.34'
    }
}

plugins {
    id 'java'
    id "idea"
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'dev.daniesteb'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework:spring-jdbc:6.1.10',
            'org.mongodb:mongodb-driver-sync:5.1.2',
            'org.antlr:ST4:4.3.4',
            "org.projectlombok:lombok:${lombokVersion}"

    testImplementation 'com.intuit.karate:karate-junit5',
            "com.intuit.karate:karate-netty",
            "com.intuit.karate:karate-apache:0.9.6",
            "net.masterthought:cucumber-reporting:5.8.1",
            'junit:junit:4.13.2'

    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
}

compileJava.dependsOn(clean)

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.register('karateDebug', JavaExec) {
    classpath = sourceSets.test.runtimeClasspath
    main = 'com.intuit.karate.cli.Main'
}

sourceSets {
    test {
        java {
            srcDir file('src/test/java')
            exclude '/UiRunner.java'
        }
        resources {
            srcDir file('src/test/java')
            exclude '/*.java'
        }
    }
}


test {
    systemProperties System.getProperties()
    systemProperty "file.encoding", "utf-8"
    // pull karate options into the runtime
    systemProperty "karate.options", System.properties.getProperty("karate.options")
    // pull karate env into the runtime
    systemProperty "karate.env", System.properties.getProperty("karate.env")
    // ensure tests are always run
    outputs.upToDateWhen { false }
}

gradle.startParameter.continueOnFailure = true